fixed the CSS of the canvas. I missed the z-index

--- a/TicTacToe/CSS/game.css
+++ b/TicTacToe/CSS/game.css
@@ -32,6 +32,8 @@ canvas {
     /* This property sets the position of our canvas to the top left
     corner of our container. */
     position: absolute;
+    /* This property places our canvas over the top of our table. */
+    z-index: 10;
     /* This property makes our canvas invisible. */
     pointer-events: none;
 }
